scrollbar fix

--- a/src/index.css
+++ b/src/index.css
@@ -889,21 +889,29 @@ body {
 }
 
 /* Scrollbar Styling - Coffee Theme */
-.history-list::-webkit-scrollbar {
+.history-list::-webkit-scrollbar,
+.history-modal__list::-webkit-scrollbar,
+.history-modal__preview::-webkit-scrollbar {
   width: 5px;
 }
 
-.history-list::-webkit-scrollbar-track {
+.history-list::-webkit-scrollbar-track,
+.history-modal__list::-webkit-scrollbar-track,
+.history-modal__preview::-webkit-scrollbar-track {
   background: var(--color-dark-roast);
   border-radius: 3px;
 }
 
-.history-list::-webkit-scrollbar-thumb {
+.history-list::-webkit-scrollbar-thumb,
+.history-modal__list::-webkit-scrollbar-thumb,
+.history-modal__preview::-webkit-scrollbar-thumb {
   background: var(--color-mocha);
   border-radius: 3px;
 }
 
-.history-list::-webkit-scrollbar-thumb:hover {
+.history-list::-webkit-scrollbar-thumb:hover,
+.history-modal__list::-webkit-scrollbar-thumb:hover,
+.history-modal__preview::-webkit-scrollbar-thumb:hover {
   background: var(--color-caramel);
 }
 
